Bug 58897 - [HSW]*ERROR* Unknown unclaimed register
Summary: [HSW]*ERROR* Unknown unclaimed register
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium minor
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 59549 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-12-31 05:29 UTC by shui yangwei
Modified: 2017-10-06 14:47 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg from Booting up (126.87 KB, text/plain)
2012-12-31 05:29 UTC, shui yangwei
no flags Details
message from intel_reg_dumper (16.37 KB, text/plain)
2012-12-31 05:30 UTC, shui yangwei
no flags Details
lspci message (1.37 KB, text/plain)
2012-12-31 05:32 UTC, shui yangwei
no flags Details
tune down debug message (1.25 KB, patch)
2013-01-07 09:42 UTC, Daniel Vetter
no flags Details | Splinter Review
reset unclaimed register writes errors on takeover (1.01 KB, patch)
2013-01-10 10:08 UTC, Daniel Vetter
no flags Details | Splinter Review
dmesg (80.65 KB, text/plain)
2013-01-11 08:25 UTC, shui yangwei
no flags Details
error in dmesg after booting up (84.00 KB, text/plain)
2013-02-01 05:30 UTC, shui yangwei
no flags Details

Description shui yangwei 2012-12-31 05:29:09 UTC
Created attachment 72323 [details]
dmesg from Booting up

Environment:
---------------------
kernel commit: c0c36b941b6f0be6ac74f340040cbb29d6a0b06c
drm/i915: Return the real error code from intel_set_mode()


Description:
---------------------
After booting up, there's an error in dmesg like below:

[drm:i915_write32] *ERROR* Unknown unclaimed register before writing to c5100
Comment 1 shui yangwei 2012-12-31 05:30:40 UTC
Created attachment 72324 [details]
message from intel_reg_dumper
Comment 2 shui yangwei 2012-12-31 05:32:20 UTC
Created attachment 72326 [details]
lspci message
Comment 3 Gordon Jin 2013-01-07 06:40:56 UTC
is this regression?

I'm decreasing severity as I don't see real bad impact to users.
Comment 4 Daniel Vetter 2013-01-07 09:15:39 UTC
The first one is likely garbage left over from the BIOS, I think we need to tune down the debug message there. The later ones sound like real bugs ...
Comment 5 Daniel Vetter 2013-01-07 09:42:31 UTC
Created attachment 72614 [details] [review]
tune down debug message
Comment 6 shui yangwei 2013-01-08 03:00:01 UTC
(In reply to comment #5)
> Created attachment 72614 [details] [review] [review]
> tune down debug message

This patch worked, this error dmesg doesn't exist while this patch applied on latest -next-queued commit.
Comment 7 Daniel Vetter 2013-01-10 10:08:19 UTC
Created attachment 72775 [details] [review]
reset unclaimed register writes errors on takeover

New patch for you to test, with a different approach.
Comment 8 shui yangwei 2013-01-11 08:15:50 UTC
(In reply to comment #7)
> Created attachment 72775 [details] [review] [review]
> reset unclaimed register writes errors on takeover
> 
> New patch for you to test, with a different approach.

Apply this patch on top commit of branch -next-queued,

this error information will appeared in dmesg.

commit: 9c7a47e7ca7c694ff4f19b568ad4ce1dba64dbd0

[    1.786664] [drm:intel_dsm_platform_mux_info] *ERROR* MUX INFO call failed
Comment 9 shui yangwei 2013-01-11 08:25:22 UTC
Created attachment 72840 [details]
dmesg

(In reply to comment #8)
> (In reply to comment #7)
> > Created attachment 72775 [details] [review] [review] [review]
> > reset unclaimed register writes errors on takeover
> > 
> > New patch for you to test, with a different approach.
> 
> Apply this patch on top commit of branch -next-queued,
> 
> this error information will appeared in dmesg.
> 
> commit: 9c7a47e7ca7c694ff4f19b568ad4ce1dba64dbd0
> 
> [    1.786664] [drm:intel_dsm_platform_mux_info] *ERROR* MUX INFO call failed

Modify:
---------------
[    5.032931] [drm:i915_write32] *ERROR* Unknown unclaimed register before writing to c5100
Comment 10 Daniel Vetter 2013-01-11 08:26:41 UTC
Hm, then there's something strange going on, I need to analyze this further ...
Comment 11 Chris Wilson 2013-01-18 13:30:07 UTC
*** Bug 59549 has been marked as a duplicate of this bug. ***
Comment 12 Paulo Zanoni 2013-01-29 19:16:12 UTC
Daniel's patch certainly fixes the problem for me... Are you really sure you tested a Kernel with Daniel's patch?

Anyway, I've proposed changing from GEN7_ERROR_INT to FPGA_DBG, so there's a new patch on the mailing list that will fix this bug after we convert to FPGA_DBG.
Comment 13 shui yangwei 2013-01-30 05:31:19 UTC
(In reply to comment #12)
> Daniel's patch certainly fixes the problem for me... Are you really sure you
> tested a Kernel with Daniel's patch?
> 
I applied the patch on top -next-queued commit, then retest it on my HSW machine, the error dmesg also exist.

Machine Information:
----------------------------
HSW desktop:
BIOS Version: HSWLPTU1.86C.0093.R00.1209242321
Stepping: C0

> Anyway, I've proposed changing from GEN7_ERROR_INT to FPGA_DBG, so there's a
> new patch on the mailing list that will fix this bug after we convert to
> FPGA_DBG.

Please give a link of the patch, I can't find a patch related to this bug on mailing list. Thanks...
Comment 14 Paulo Zanoni 2013-01-31 18:46:53 UTC
(In reply to comment #13)
> (In reply to comment #12)
> > Daniel's patch certainly fixes the problem for me... Are you really sure you
> > tested a Kernel with Daniel's patch?
> > 
> I applied the patch on top -next-queued commit, then retest it on my HSW
> machine, the error dmesg also exist.

Can you please attach dmesg?

> 
> Machine Information:
> ----------------------------
> HSW desktop:
> BIOS Version: HSWLPTU1.86C.0093.R00.1209242321
> Stepping: C0
> 
> > Anyway, I've proposed changing from GEN7_ERROR_INT to FPGA_DBG, so there's a
> > new patch on the mailing list that will fix this bug after we convert to
> > FPGA_DBG.
> 
> Please give a link of the patch, I can't find a patch related to this bug on
> mailing list. Thanks...

http://lists.freedesktop.org/archives/intel-gfx/2013-January/024116.html
http://lists.freedesktop.org/archives/intel-gfx/2013-January/024117.html
http://lists.freedesktop.org/archives/intel-gfx/2013-January/024211.html

If this also doesn't help you, please attach dmesg.
Comment 15 shui yangwei 2013-02-01 05:23:46 UTC
> http://lists.freedesktop.org/archives/intel-gfx/2013-January/024116.html
> http://lists.freedesktop.org/archives/intel-gfx/2013-January/024117.html
> http://lists.freedesktop.org/archives/intel-gfx/2013-January/024211.html
> 
> If this also doesn't help you, please attach dmesg.

I tested with -next-queued top commit: 209d52110a32c2069b5d870504e73fdb0e30fc51,
and applied the patches. The error also exists in dmesg. I attached the dmesg in attachment, any more message you want, I'm glad to try and doing for this.
Comment 16 shui yangwei 2013-02-01 05:30:20 UTC
Created attachment 74031 [details]
error in dmesg after booting up
Comment 17 Timo Aaltonen 2013-04-12 13:32:13 UTC
this seems to have been fixed in drm-intel-nightly which has those three commits
Comment 18 shui yangwei 2013-04-15 05:12:53 UTC
(In reply to comment #17)
> this seems to have been fixed in drm-intel-nightly which has those three
> commits

Our HSW C0 has been updated to C2, and I tried latest drm-intel-nightly and drm-intel-next-queued, this bug has gone. Verified here.
Comment 19 Remco Meeder 2013-08-09 21:01:46 UTC
In which kernel version is the fix included? I run 3.8.0-27 on a Ubuntu 13.04 istallation and this message is still displayed.
Comment 20 Chris Wilson 2013-08-09 21:13:30 UTC
3.8.0-27 is Ubuntu's kernel, almost 9 months behind the curve. Support queries should be addressed to them first.
Comment 21 Elizabeth 2017-10-06 14:47:17 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.